@@ -8,6 +8,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -62,7 +64,7 @@ public class MessageService {
         
         List<Message> pageMessages = start < filteredMessages.size() 
                 ? filteredMessages.subList(start, end) 
-                : List.of();
+                : Collections.emptyList();
         
         return new PageResult<>(pageMessages, total, page, size);
     }
